tinyc/test/bad/init-struct-array-designator.c
struct s
{
    int x;
    int y;
};

int main()
{
    struct s s = { [ 0 ] = 5 };

    return 0;
}
